# yacron2

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  LICENSING.md  MANIFEST.in  README.md  README.rst  TRADEMARKS.md  docker-compose-acme.yml  docker-compose-cluster-large.yml  docker-compose-cluster.yml  docker-compose-grand-tour.yml  docker-compose-pulse-cluster.yml  docker-compose-pulse.yml  docker-compose-zen.yml  docker-compose.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.githooks/: commit-msg
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  codecov.yml  dependabot.yml
.github/scripts/: check_licenses.py  check_openapi.py
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml  tox.yml
benchmarks/: README.md  bench.py  compare.py
config/: crontab.yaml
cronstable/: __main__.py  _json.py  cluster.py  config.py  cron.py  cronexpr.py  croninfo.py  crontabs.py  dag.py  dagrun.py  discovery.py  fingerprint.py  ical.py  job.py  jobapi.py  jobcli.py  jobstate.py  leadership.py  mcp.py  mcpcli.py  platform.py  prometheus.py  push.py  redact.py  resources.py  state.py  state_admin.py  statsd.py  tlsutil.py  tui.py
cronstable/backends/: __init__.py  etcd.py  filesystem.py  kubernetes.py
cronstable/web/: __init__.py  index.html
docker/: Dockerfile.alpine  Dockerfile.amazonlinux  Dockerfile.distroless  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.rhel  Dockerfile.ubuntu
docs/: comparison.html  comparison.md  logo-lab.html  openapi.yaml  relay-protocol.md
docs/demo/: index.html
docs/screenshots/: README.md  build_reel.py  capture_dashboard.py  capture_logo_gif.py  capture_logs_closeup.py  capture_showcase.py  capture_social_card.py  capture_tui.py  social-card.html
example/acme-platform/: README.md  acme.env  docker-compose.yml  gen-certs.sh  jobs.yaml  node-entrypoint.sh
example/adhoc.cronstable.d/: _inc.yaml  test-tz.yaml  test-utc.yaml
example/adhoc.yacron2.d/: _inc.yaml  test-tz.yaml  test-utc.yaml
example/cluster/: README  docker-compose.yml  gen-certs.sh  jobs.yaml  node-a.yaml  node-b.yaml  node-c.yaml
example/cluster-large/: README  docker-compose.yml  gen-certs.sh  jobs.yaml  node-entrypoint.sh
example/crontab/: README  dashboard.yaml  legacy.crontab
example/dag/: cronstable.yaml  yacron2tab.yaml
example/dag-cluster/: README  cronstable.yaml  docker-compose.yml  yacron2tab.yaml
example/demo/: cronstable.yaml  yacron2tab.yaml
example/docker/: Dockerfile  README  k8s-deploy.yaml  yacron2tab.yaml
example/etcd/: README  cronstable.yaml  docker-compose.yml  yacron2tab.yaml
example/grand-tour/: README.md  _defaults.yaml  docker-compose.yml  gen-certs.sh  legacy.crontab  node-entrypoint.sh  platform.env  platform.yaml
example/job-state/: cronstable.yaml  yacron2tab.yaml
example/kubernetes/: README  cronstable.yaml  deployment.yaml  yacron2tab.yaml
example/mcp/: README.md  cronstable.yaml  docker-compose.yml
example/pulse-cluster/: README.md  docker-compose.yml  gen-certs.sh  jobs.yaml  node-a.yaml  node-b.yaml  node-c.yaml
example/pulse-monitor/: README.md  cronstable.yaml  docker-compose.yml  yacron2tab.yaml
example/zen-demo/: cronstable.yaml  docker-compose.yml  yacron2tab.yaml
ios/: LICENSE  README.md
packaging/homebrew/: cronstable.rb.tmpl  render-formula.sh
pro/: LICENSE  README.md  pyproject.toml
pro/cronstable_pro/: __init__.py  licensing.py
pro/tests/: test_boundary.py
pyinstaller/: Dockerfile  Dockerfile-alpine  Makefile  cronstable  cronstable.spec  entitlements.plist  install_orjson.sh  verify_orjson.py  verify_pynacl.py  verify_uvloop.py  yacron2  yacron2.spec
scripts/: gen_changelog_entry.py
src/: config.rs  cron.rs  error.rs  job.rs  main.rs  report.rs  schedule.rs  statsd.rs  template.rs  version.rs  web.rs
src/config/: envfile.rs  scalar.rs  tests.rs
tests/: _commands.py  gen_cron_golden.py  test_backend_etcd.py  test_backend_filesystem.py  test_backend_kubernetes.py  test_benchmarks.py  test_cli_stubs.py  test_cluster.py  test_config.py  test_config_backends.py  test_config_gaps.py  test_cron.py  test_cron_state_hardening.py  test_cronexpr.py  test_croninfo.py  test_crontabs.py  test_dag_task_reports.py  test_fingerprint.py  test_ical.py  test_job.py  test_json_portability.py  test_leadership.py  test_main.py  test_mcp.py  test_mcp_tools.py  test_mcpcli.py  test_notify.py  test_openapi.py  test_platform.py  test_prometheus.py  test_push.py  test_redact.py  test_resources.py  test_state.py  test_state_admin.py  test_state_dag.py  test_state_dag_run.py  test_state_fleet_ha.py  test_state_hardening.py  test_state_job_api.py  (+20 more)
tests/data/: cron_golden.json
wiki/: Architecture-and-Internals.md  Business-Day-Schedules.md  CLI-Reference.md  Calendar-Export.md  Classic-Crontabs.md  Clustering-and-Leader-Election.md  Commands-and-Environment.md  Concurrency-and-Timeouts.md  Configuration-Reference.md  Contributing-and-Releasing.md  Duplicate-Schedule-Detection.md  Durable-State.md  Environment-Variable-Interpolation.md  Failure-Detection-and-Retries.md  HTTP-API.md  Hashed-Schedules.md  Home.md  Includes-and-Defaults.md  Installation.md  Job-Set-ID.md  LAN-Discovery.md  Late-Run-Detection.md  Listener-TLS.md  Logging-Configuration.md  MCP-Server-Design.md  MCP.md  Metrics-with-Prometheus.md  Metrics-with-Statsd.md  Migration-from-yacron.md  Orchestration-and-DAGs.md  Output-Capturing.md  Pausing-Jobs.md  Performance-Benchmarks.md  Production-Deployment.md  Push-Notifications.md  Reporting.md  Resource-Monitoring.md  Running-on-Windows.md  Schedule-Linting.md  Schedule-Pressure.md  (+8 more)
yacron2/: __main__.py  _json.py  cluster.py  config.py  cron.py  cronexpr.py  crontabs.py  dag.py  dagrun.py  fingerprint.py  job.py  jobapi.py  jobcli.py  jobstate.py  leadership.py  platform.py  prometheus.py  redact.py  resources.py  state.py  state_admin.py  statsd.py
yacron2/backends/: __init__.py  etcd.py  filesystem.py  kubernetes.py
yacron2/web/: index.html
(+2 files in other folders)
