[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "yacron2"
description = "A modern, container-friendly cron replacement."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "P", email = "ptweezy@runforyour.money" }]
keywords = [
    "cron",
    "crontab",
    "scheduler",
    "job-scheduler",
    "task-scheduler",
    "scheduling",
    "cron-replacement",
    "cronjob",
    "container",
    "docker",
    "kubernetes",
    "k8s",
    "daemon",
    "yaml",
    "devops",
    "sre",
    "sysadmin",
    "sentry",
    "statsd",
    "retry",
    "timezone",
    "asyncio",
]
dynamic = ["version"]
dependencies = [
    "strictyaml>=1.7,<2",
    "crontab>=1,<2",
    "aiohttp>=3.10,<4",
    "sentry-sdk>=2,<3",
    "aiosmtplib>=3,<6",
    "jinja2>=3,<4",
    # zoneinfo's tz database, so timezones resolve on minimal/slim images
    # that don't ship the system tzdata.
    "tzdata>=2024.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ptweezy/yacron2"
Documentation = "https://github.com/ptweezy/yacron2#readme"
Source = "https://github.com/ptweezy/yacron2"
Changelog = "https://github.com/ptweezy/yacron2/releases"
Issues = "https://github.com/ptweezy/yacron2/issues"
Container = "https://github.com/ptweezy/yacron2/pkgs/container/yacron2"

[project.scripts]
yacron2 = "yacron2.__main__:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "mypy-extensions",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "tox",
]

[tool.setuptools]
packages = ["yacron2", "yacron2.web"]

[tool.setuptools.package-data]
"yacron2.web" = ["*.html"]

[tool.setuptools_scm]
version_file = "yacron2/version.py"

[tool.black]
line-length = 79
target_version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = [
    # Bugbear warnings
    "B",
    "B9",
    # mccabe complexity warnings
    "C",
    # Pycodestyle errors https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    "E",
    # Pyflakes violations https://flake8.pycqa.org/en/latest/user/error-codes.html
    "F",
    # Pycodestyle warnings
    "W",
    # pyupgrade
    # "UP",
    "I",  # <= import sorting
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.mypy]
python_version = "3.10"
# Type-check against the POSIX API surface (grp/pwd/os.setuid/...), which is
# where those calls actually run; the Windows-specific branches are guarded at
# runtime (sys.platform checks / getattr) and covered by the test suite. CI
# runs mypy on Linux, so pinning this keeps local runs on any OS consistent.
platform = "linux"
no_implicit_optional = true
warn_no_return = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["yacron2"]
branch = true
omit = ["yacron2/version.py"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
