[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "yacron2"
description = "A modern, distributed, fault-tolerant, highly available, leader-electing, container-friendly, highly configurable, precompiled, multi-architecture, portable, security-hardened, production-ready cron replacement."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "P", email = "ptweezy@runforyour.money" }]
keywords = [
    "cron",
    "crontab",
    "scheduler",
    "job-scheduler",
    "task-scheduler",
    "scheduling",
    "cron-replacement",
    "cronjob",
    "container",
    "docker",
    "kubernetes",
    "k8s",
    "daemon",
    "yaml",
    "devops",
    "sre",
    "sysadmin",
    "sentry",
    "statsd",
    "prometheus",
    "metrics",
    "monitoring",
    "retry",
    "timezone",
    "asyncio",
]
dynamic = ["version"]
dependencies = [
    "strictyaml>=1.7,<2",
    "crontab>=1,<2",
    "aiohttp>=3.10,<4",
    "sentry-sdk>=2,<3",
    "aiosmtplib>=3,<6",
    "jinja2>=3,<4",
    # zoneinfo's tz database, so timezones resolve on minimal/slim images
    # that don't ship the system tzdata.
    "tzdata>=2024.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ptweezy/yacron2"
Documentation = "https://github.com/ptweezy/yacron2#readme"
Source = "https://github.com/ptweezy/yacron2"
Changelog = "https://github.com/ptweezy/yacron2/releases"
Issues = "https://github.com/ptweezy/yacron2/issues"
Container = "https://github.com/ptweezy/yacron2/pkgs/container/yacron2"

[project.scripts]
yacron2 = "yacron2.__main__:main"

[project.optional-dependencies]
# Optional: use the official Kubernetes client for the `kubernetes` leadership
# backend. Entirely optional -- without it (or on an architecture where its
# grpc/protobuf wheels are unavailable) the backend auto-falls back to its
# hand-rolled apiserver REST transport over the core aiohttp dependency, so the
# core install stays zero-new-dep and architecture-portable. The etcd backend
# needs no extra: it always uses etcd's v3 gRPC-gateway JSON/HTTP API directly.
kubernetes = ["kubernetes>=27"]
# Optional: swap asyncio's event loop for uvloop's faster libuv-based one
# (cluster HTTP, web dashboard, Prometheus scrape). Best-effort at runtime --
# yacron2 falls back to stock asyncio when it is absent -- so it stays off the
# core install to keep the zero-new-dep, architecture-portable baseline intact.
# Gated off Windows, which has no uvloop build (and needs the Proactor loop for
# subprocesses anyway); pip skips it there rather than failing to resolve.
speedups = [
    "uvloop>=0.19; sys_platform != 'win32'",
    # orjson accelerates the durable-state persistence and cluster-gossip JSON
    # paths (see yacron2._json, which falls back to the stdlib json when it is
    # absent). Like uvloop it is best-effort: it ships no wheels for some of
    # the leaner architectures we target (riscv64, armv6, musl ppc64le/s390x),
    # so it stays optional and the zero-new-dep, architecture-portable core
    # install runs on stock json without it. It does have Windows wheels, so
    # (unlike uvloop) it needs no platform marker.
    "orjson>=3.9",
]
dev = [
    # only the cluster mTLS tests use it, and it has no win-arm64 wheel; see
    # requirements_dev.txt for why it's gated to other platforms.
    "cryptography; platform_machine != 'ARM64' or sys_platform != 'win32'",
    "mypy",
    "mypy-extensions",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "tox",
    # tox-uv routes tox's env creation + installs through uv (see tox.ini).
    "tox-uv",
]

[tool.setuptools]
# The kubernetes/etcd leadership backends talk to their store over plain HTTP
# via the core aiohttp dependency (no kubernetes/etcd3 client, no grpc), so
# they add no runtime dependency and need no optional extra -- which also keeps
# yacron2's wide architecture coverage intact.
packages = ["yacron2", "yacron2.web", "yacron2.backends"]

[tool.setuptools.package-data]
"yacron2.web" = ["*.html"]

[tool.setuptools_scm]
version_file = "yacron2/version.py"

[tool.black]
line-length = 79
target_version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = [
    # Bugbear warnings
    "B",
    "B9",
    # mccabe complexity warnings
    "C",
    # Pycodestyle errors https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    "E",
    # Pyflakes violations https://flake8.pycqa.org/en/latest/user/error-codes.html
    "F",
    # Pycodestyle warnings
    "W",
    # pyupgrade
    # "UP",
    "I",  # <= import sorting
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.mypy]
python_version = "3.10"
# Type-check against the POSIX API surface (grp/pwd/os.setuid/...), which is
# where those calls actually run; the Windows-specific branches are guarded at
# runtime (sys.platform checks / getattr) and covered by the test suite. CI
# runs mypy on Linux, so pinning this keeps local runs on any OS consistent.
platform = "linux"
no_implicit_optional = true
warn_no_return = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
# The optional `speedups` deps are imported behind try/except with a stdlib
# fallback (orjson in yacron2._json, uvloop in yacron2.__main__), so a checkout
# without the extra installed must still type-check cleanly.
module = ["orjson", "uvloop"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["yacron2"]
branch = true
omit = ["yacron2/version.py"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
